methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:6: error: value droite is not a member of Unit
  avance();setCouleurBrosse(Color.YELLOW);baisseBrosse();leveBrosse();setCouleurBrosse(c);avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance()droite();
                                                                                                                                                                                                                                                                                                                                       ^